--- a/Small Business Website/contact.html
+++ b/Small Business Website/contact.html
@@ -18,9 +18,8 @@
                 </ul>
             </nav>
             <!-- content of page -->
-                <h2>Contact Information</h2>
             <div id="content">
-                    <img src="Images/softwareimage.jpg" alt="picture of a mouse connecting to the word software" id="softwareImage">
+                <h2>Contact Information</h2>
                 <form>
                     First Name:<br>
                     <input type="text" name="First Name">
@@ -33,8 +32,14 @@
                     <br>
                     <br>
                     Message:<br>
-                    <textarea name="message" rows="20" cols="95"></textarea>
+                    <textarea id="messageBox" name="message" rows="20" cols="95"></textarea>
+                    <br>
+                <button id="submitButton">Submit</button>
                 </form>
+                <div id="map">
+                <p>Map</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d97574.5308397845!2d-111.71299303516531!3d40.16000949482623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874dbd5ffece0b59%3A0xa1a1b3533e9269d7!2sPizza+Hut!5e0!3m2!1sen!2sus!4v1507750204141" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
             </div>
             <footer>Copyright&copy; 2017 Tyson Shepherd</footer>
         </div>
