--- a/Small Business Website/products.html
+++ b/Small Business Website/products.html
@@ -23,39 +23,39 @@
                 <div id="gallery">
                     <figure>
                     <img src="Images/crazybob.svg" alt="picture of crazy bob">
-                        <figcaption>does this work???</figcaption>
+                        <figcaption>android an open source OS.</figcaption>
                     </figure>
                     <figure>
                     <img src="Images/googleLogo.png" alt="picture of crazy bob">
-                        <figcaption>does this work???</figcaption>
+                        <figcaption>Google the only search engine to use.</figcaption>
                     </figure>
                     <figure>
                     <img src="Images/bingLogo.png" alt="picture of crazy bob">
-                        <figcaption>does this work???</figcaption>
+                        <figcaption>Bing a search engine noyone uses.</figcaption>
                     </figure>
                     <figure>
-                    <img src="Images/crazybob.svg" alt="picture of crazy bob">
-                        <figcaption>does this work??? </figcaption>
+                    <img src="Images/VLCLogo.png" alt="picture of crazy bob">
+                        <figcaption>VLC A great way to watch movies on your pc.</figcaption>
                     </figure>
                     <figure>
                     <img src="Images/twitchLogo.png" alt="picture of crazy bob">
-                        <figcaption>does this work???</figcaption>
+                        <figcaption>Twitch A streaming service where you can watch people play games.</figcaption>
                     </figure>
                     <figure>
                     <img src="Images/Blender_logo.png" alt="picture of crazy bob">
-                        <figcaption>does this work???</figcaption>
+                        <figcaption>Blender a free 3D modeling program for your pc.</figcaption>
                     </figure>
                     <figure>
                     <img src="Images/unityLogo.png" alt="picture of crazy bob">
-                        <figcaption>does this work???</figcaption>
+                        <figcaption>Unity the best way to make your game dreams come true.</figcaption>
                     </figure>
                     <figure>
-                    <img src="Images/Audacity_Logo.png" alt="picture of crazy bob">
-                        <figcaption>does this work???</figcaption>
+                    <img src="Images/Audacity_Logo.png" alt="picture of crazy bob" href="index.html">
+                        <figcaption>Audacity a free audo editing software.</figcaption>
                     </figure>
                     <figure>
                     <img src="Images/firefoxLogo.png" alt="picture of crazy bob">
-                        <figcaption>does this work???</figcaption>
+                        <figcaption>Firefox the only good browser to use.</figcaption>
                     </figure>
                 </div>
             </div>
