Added fancy embeded video
lol :)

--- a/WebMedia/index.html
+++ b/WebMedia/index.html
@@ -18,5 +18,8 @@
             <source src="video/BattyTheBat.ogg">
         </video>
     </div>
+    <div id="post">
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/l1k9xnJ4ONA" frameborder="0" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
