--- a/WebMedia/index.html
+++ b/WebMedia/index.html
@@ -8,18 +8,38 @@
 
 <body>
     <div id="post">
-    <p>what a great image</p>
+    <h3>what a great image you have</h3>
+        <p> its SHS back at it again to bad they aren't as cool as the alc</p>
     <img src="images/SpringvilleWall.png" alt="Wall of Springville Highschool">
     </div>
     <div id="post">
-    <p>what a great video</p>
+    <h4>what a great video you have</h4>
+        <p>DONT DO IT</p>
         <video id="postVid" controls>
-            <source src="video/BattyTheBat.ogg">
-            <source src="video/BattyTheBat.ogg">
+            <source src="video/BattyTheBat.ogg" type="video/ogg">
+            <source src="video/BattyTheBat.mp4" type="video/mp4">
         </video>
     </div>
     <div id="post">
+        <h3>star wars trailer</h3>
+        <p>its time to stop</p>
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/l1k9xnJ4ONA" frameborder="0" allowfullscreen></iframe>
+    </div>
+        <div id="post">
+    <h3>what great background music you have</h3>
+            <p>Magic Forest by Kevin Cloud incomputech.com</p>
+        <audio id="postBackgroundMusic" controls>
+            <source src="audio/Magic%20Forest.mp3" type="audio/mp3">
+            <source src="audio/MagicForestCompressed.ogg" type="audio/ogg">
+        </audio>
+    </div>
+        <div id="post">
+    <h3>what a great sound effect you have</h3>
+            <p>sawing wood by daniel simon soundbible.com</p>
+            <audio id="postVid" controls>
+            <source src="audio/sawing-wood-daniel_simon.mp3" type="audio/mp3">
+            <source src="audio/SawingWoodCompressed.ogg" type="audio/ogg">
+        </audio>
     </div>
 </body>
 </html>
