--- a/OwnAdventureFunctions/index.html
+++ b/OwnAdventureFunctions/index.html
@@ -16,6 +16,9 @@
         var money;
         function startGame()
         {
+            name = prompt("what is your great name?");
+            confirm("are you sure you want to keep that great name?");
+            alert("either way idc you're keeping it now...");
         heatlh = 0;
         money = 0;
         field();
