--- a/DOM/content.html
+++ b/DOM/content.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-
+<html lang="en">
 <body>
-    
+    <p id="magicId">YEET</p>
+    <script>
+    document.getElementById("magicId").innerHTML = "this is some pretty magical text";
+    </script>
 </body>
 </html>
