--- a/DOM/ouputstream.html
+++ b/DOM/ouputstream.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-
+<html lang="en">
 <body>
-    
+    <script>
+    var whatToOutput = prompt("what would you like to add to your html website");
+        document.write(whatToOutput);
+    </script>
 </body>
 </html>
