--- a/ColorChanger/index.html
+++ b/ColorChanger/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <title>Color Changer</title>
 </head>
+
 
 <body>
     <button id="change" class="btn">Change Color</button>
@@ -77,5 +79,6 @@
             </div>
         </div>
     </div>
+        <script src="javascript.js"></script>
 </body>
 </html>
