--- a/PortfolioSite/ActualSite/index.html
+++ b/PortfolioSite/ActualSite/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <div id="menubar">
-        <a href="./index.html">Home</a>
-        <a href="./portfolio.html">Portfolio</a>
-        <a href="./awards.html">Awards</a>
-        <a href="./contact.html">Contact</a>
-    </div>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h2>Programmer</h2>
+    <div id="menuBar">
+        <a class="menuBarItem" href="./index.html">Home</a>
+        <a class="menuBarItem" href="./portfolio.html">Portfolio</a>
+        <a class="menuBarItem" href="./awards.html">Awards</a>
+        <a class="menuBarItem" href="./contact.html">Contact</a>
+    </div>
+    <h2 id="jobTitle">Programmer</h2>
     <!-- a cool node styled image stuffs that link to the other pages -->
 </body>
 </html>
