--- a/PortfolioSite/ActualSite/portfolio.html
+++ b/PortfolioSite/ActualSite/portfolio.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <div id="menubar">
-        <a href="./index.html">Home</a>
-        <a href="./portfolio.html">Portfolio</a>
-        <a href="./awards.html">Awards</a>
-        <a href="./contact.html">Contact</a>
+    <link rel="stylesheet" href="./style.css">
+    <div id="menuBar">
+        <a class="menuBarItem" href="./index.html">Home</a>
+        <a class="menuBarItem" href="./portfolio.html">Portfolio</a>
+        <a class="menuBarItem" href="./awards.html">Awards</a>
+        <a class="menuBarItem" href="./contact.html">Contact</a>
     </div>
 </head>
 
