--- a/PortfolioSite/ActualSite/awards.html
+++ b/PortfolioSite/ActualSite/awards.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <div id="menuBar">
-        <div id="menuBarItem"><a href="./index.html">Home</a></div>
-        <div id="menuBarItem"><a href="./portfolio.html">Portfolio</a></div>
-        <div id="menuBarItem"><a href="./awards.html">Awards</a></div>
-        <div id="menuBarItem"><a href="./contact.html">Contact</a></div>
+        <a class="menuBarItem" href="./index.html">Home</a>
+        <a class="menuBarItem" href="./portfolio.html">Portfolio</a>
+        <a class="menuBarItem" href="./awards.html">Awards</a>
+        <a class="menuBarItem" href="./contact.html">Contact</a>
     </div>
 </head>
 
