--- a/PortfolioSite/ActualSite/portfolio.html
+++ b/PortfolioSite/ActualSite/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <div id="menuBar">
         <a class="menuBarItem" href="./index.html">Home</a>
         <a class="menuBarItem" href="./portfolio.html">Portfolio</a>
@@ -12,18 +13,19 @@
     </div>
 </head>
 
-<body>
+<body id="trash">
     <p>Skills</p>
-    <img class="gallery" src="theImage">
-    <img class="gallery" src="theImage">
-    <img class="gallery" src="theImage">
-    <img class="gallery" src="theImage">
-    <img class="gallery" src="theImage">
-    <img class="gallery" src="theImage">
-    <img class="gallery" src="theImage">
-    <img class="gallery" src="theImage">
-    <img class="gallery" src="theImage">
-    
+    <div id=portfolio>
+        <img class="gallery" src="./Images/theImage.jpg">
+        <img class="gallery" src="./Images/theImage.jpg">
+        <img class="gallery" src="./Images/theImage.jpg">
+        <img class="gallery" src="./Images/theImage.jpg">
+        <img class="gallery" src="./Images/theImage.jpg">
+        <img class="gallery" src="./Images/theImage.jpg">
+        <img class="gallery" src="./Images/theImage.jpg">
+        <img class="gallery" src="./Images/theImage.jpg">
+        <img class="gallery" src="./Images/theImage.jpg">
+    </div>
     <h1 id="nameOfImage">Name Of Image</h1>
     <div class="imageDescriptions">
     <img id="subImage" src="theImage">
@@ -34,4 +36,5 @@
     Image Description
     -->
 </body>
+    <script src="portfolioscript.js"></script>
 </html>
