--- a/PortfolioSite/ActualSite/portfolio.html
+++ b/PortfolioSite/ActualSite/portfolio.html
@@ -13,7 +13,7 @@
     </div>
 </head>
 
-<body id="trash">
+<body>
     <p>Skills</p>
     <div id=portfolio>
         <img class="gallery" src="./Images/theImage.jpg">
