--- a/PortfolioSite/ActualSite/portfolio.html
+++ b/PortfolioSite/ActualSite/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <div id="menuBar">
         <a class="menuBarItem" href="./index.html">Home</a>
@@ -14,19 +15,19 @@
 </head>
 
 <body>
-    <p>Skills</p>
-    <div id=portfolio>
-        <img class="gallery" src="./Images/theImage.jpg">
-        <img class="gallery" src="./Images/theImage.jpg">
-        <img class="gallery" src="./Images/theImage.jpg">
-        <img class="gallery" src="./Images/theImage.jpg">
-        <img class="gallery" src="./Images/theImage.jpg">
-        <img class="gallery" src="./Images/theImage.jpg">
-        <img class="gallery" src="./Images/theImage.jpg">
+    <h1 id="skillTitle">Skills</h1>
+    <div id=portfolio>        
+        <img class="gallery" src="./Images/C#.jpg">
+        <img class="gallery" src="./Images/ATMIS.png">
+        <img class="gallery" src="./Images/C++.png">
+        <img class="gallery" src="./Images/linux.png">
+        <img class="gallery" src="./Images/ruby.jpg">
+        <img class="gallery" src="./Images/seek.jpg">
+        <img class="gallery" src="./Images/Unity.jpg">
     </div>
-    <h1 id="nameOfImage">Name Of Image</h1>
-    <div class="imageDescriptions">
-    <p id="descriptionText">Description of Image</p>
+    <div id="imageDescription">
+        <h1 id="nameOfImage">Name Of Image</h1>
+        <p id="descriptionText">Description of Image</p>
     </div>
     <!-- 
     title of image here(hyperlink to work)
