--- a/PortfolioSite/ActualSite/portfolio.html
+++ b/PortfolioSite/ActualSite/portfolio.html
@@ -17,13 +17,13 @@
 <body>
     <h1 id="skillTitle">Skills</h1>
     <div id=portfolio>        
-        <img class="gallery" src="./Images/C#.jpg">
-        <img class="gallery" src="./Images/ATMIS.png">
+        <img class="gallery" src="./Images/CSharp.png">
         <img class="gallery" src="./Images/C++.png">
+        <img class="gallery" src="./Images/ATMIS.png">
         <img class="gallery" src="./Images/linux.png">
-        <img class="gallery" src="./Images/ruby.jpg">
-        <img class="gallery" src="./Images/seek.jpg">
-        <img class="gallery" src="./Images/Unity.jpg">
+        <img class="gallery" src="./Images/ruby.png">
+        <img class="gallery" src="./Images/seek.png">
+        <img class="gallery" src="./Images/unity.png">
     </div>
     <div id="imageDescription">
         <h1 id="nameOfImage">Name Of Image</h1>
