working on making all data visible

--- a/PortfolioSite/ActualSite/portfolio.html
+++ b/PortfolioSite/ActualSite/portfolio.html
@@ -29,6 +29,26 @@
         <h1 id="nameOfImage">Name Of Image</h1>
         <p id="descriptionText">Description of Image</p>
     </div>
+    <div id="imageDescription">
+        <h1 id="nameOfImage">Name Of Image</h1>
+        <p id="descriptionText">Description of Image</p>
+    </div>
+    <div id="imageDescription">
+        <h1 id="nameOfImage">Name Of Image</h1>
+        <p id="descriptionText">Description of Image</p>
+    </div>
+    <div id="imageDescription">
+        <h1 id="nameOfImage">Name Of Image</h1>
+        <p id="descriptionText">Description of Image</p>
+    </div>
+    <div id="imageDescription">
+        <h1 id="nameOfImage">Name Of Image</h1>
+        <p id="descriptionText">Description of Image</p>
+    </div>
+    <div id="imageDescription">
+        <h1 id="nameOfImage">Name Of Image</h1>
+        <p id="descriptionText">Description of Image</p>
+    </div>
     <!-- 
     title of image here(hyperlink to work)
     Image Description
