--- a/PortfolioSite/ActualSite/index.html
+++ b/PortfolioSite/ActualSite/index.html
@@ -14,7 +14,28 @@
         <a class="menuBarItem" href="./awards.html">Awards</a>
         <a class="menuBarItem" href="./contact.html">Contact</a>
     </div>
-    <h2 id="jobTitle">Programmer</h2>
+    <div id="homepage">
+        <h2 id="jobTitle">Programmer</h2>
+        <img id="selfPortrait" src="Images/seek.png">
+        <!--This image needs to be replaced with a personal image-->
+        <p>Hi I'm Tyson Shepherd and I like to game and program.</p>
+        <div class="imageAndDescription">
+            <img src="Images/C++.png">
+            <p>My PC, where I live and will probably die.</p>
+        </div>
+        <div class="imageAndDescription">
+            <img src="Images/C++.png">
+            <p>My PC</p>
+        </div>
+        <div class="imageAndDescription">
+            <img src="Images/C++.png">
+            <p>My PC</p>
+        </div>
+        <div class="imageAndDescription">
+            <img src="Images/C++.png">
+            <p>My PC</p>
+        </div>
+    </div>
     <!-- a cool node styled image stuffs that link to the other pages -->
 </body>
 </html>
