--- a/PortfolioSite/ActualSite/portfolio.html
+++ b/PortfolioSite/ActualSite/portfolio.html
@@ -35,7 +35,8 @@
     </div>
     <div class="imageDescription">
         <h1 class="nameOfImage">ATMIS</h1>
-        <p class="descriptionText">This was my first app/game I have ever fully finished and published. https://play.google.com/store/apps/details?id=com.tysonthedev.AllThatMattersIsSPEED</p>
+        <p class="descriptionText">This was my first app/game I have ever fully finished and published.</p>
+        <a href="https://play.google.com/store/apps/details?id=com.tysonthedev.AllThatMattersIsSPEED">ATMIS</a>
     </div>
     <div class="imageDescription">
         <h1 class="nameOfImage">Linux</h1>
