--- a/PortfolioSite/ActualSite/awards.html
+++ b/PortfolioSite/ActualSite/awards.html
@@ -14,6 +14,12 @@
 </head>
 
 <body>
-    
+    <h1>Awards/Certifications</h1>
+    <p>Web Development IA CTE Skill Certificate</p>
+    <img class="certificate" src="Images/C++.png">
+    <p>Web Development IA CTE Skill Certificate</p>
+    <img class="certificate" src="Images/C++.png">
+    <p>Web Development IA CTE Skill Certificate</p>
+    <img class="certificate" src="Images/C++.png">
 </body>
 </html>
