--- a/PortfolioSite/ActualSite/contact.html
+++ b/PortfolioSite/ActualSite/contact.html
@@ -14,6 +14,16 @@
 </head>
 
 <body>
-    
+    <div id="contactMe">
+    <h1>Contact Me</h1>
+        <form id="contactForm">
+            <p>Name</p>
+            <input type="text" placeholder="name">
+            <p>Email</p>
+            <input type="text" placeholder="email">
+            <p>Message</p>
+            <textarea placeholder="Message"></textarea>
+        </form>
+    </div>
 </body>
 </html>
