--- a/PortfolioSite/ActualSite/index.html
+++ b/PortfolioSite/ActualSite/index.html
@@ -16,7 +16,7 @@
     </div>
     <div id="homepage">
         <h2 id="jobTitle">Programmer</h2>
-        <img id="selfPortrait" src="Images/seek.png">
+        <img id="selfPortrait" src="Images/selfImage.png">
         <!--This image needs to be replaced with a personal image-->
         <p>Hi I'm Tyson Shepherd and I like to game and program.</p>
         <div class="imageAndDescription">
