--- a/PortfolioSite/ActualSite/index.html
+++ b/PortfolioSite/ActualSite/index.html
@@ -16,26 +16,28 @@
     </div>
     <div id="homepage">
         <h2 id="jobTitle">Programmer</h2>
-        <img id="selfPortrait" src="Images/selfImage.png">
-        <!--This image needs to be replaced with a personal image-->
-        <p>Hi I'm Tyson Shepherd and I like to game and program.</p>
-        <div class="imageAndDescription">
-            <img src="Images/C++.png">
-            <p>My PC, where I live and will probably die.</p>
-        </div>
-        <div class="imageAndDescription">
-            <img src="Images/C++.png">
-            <p>My PC</p>
-        </div>
-        <div class="imageAndDescription">
-            <img src="Images/C++.png">
-            <p>My PC</p>
-        </div>
-        <div class="imageAndDescription">
-            <img src="Images/C++.png">
-            <p>My PC</p>
-        </div>
-    </div>
+		<img id="selfPortrait" src="Images/selfImage.png">
+		<!--This image needs to be replaced with a personal image-->
+		<p>Hi I'm Tyson Shepherd and I like to game and program.</p>
+		<div id="allImagesAndDescriptions">
+			<div class="imageAndDescription">
+				<img src="Images/C++.png">
+				<p>My PC, where I live and will probably die.</p>
+			</div>
+			<div class="imageAndDescription">
+				<img src="Images/C++.png">
+				<p>My PC</p>
+			</div>
+			<div class="imageAndDescription">
+				<img src="Images/C++.png">
+				<p>CSGO</p>
+			</div>
+			<div class="imageAndDescription">
+				<img src="Images/C++.png">
+				<p>My PC</p>
+			</div>
+		</div>
+	</div>
     <!-- a cool node styled image stuffs that link to the other pages -->
 </body>
 </html>
