lots of changes
added in all images.
optmized ALL images.
made website scale correctly.
moved all non website content outside of the ActualSite folder.
slightly changed styling on all pages to make them more similar.

--- a/PortfolioSite/ActualSite/awards.html
+++ b/PortfolioSite/ActualSite/awards.html
@@ -14,12 +14,16 @@
 </head>
 
 <body>
-    <h1>Awards/Certifications</h1>
-    <p>Web Development IA CTE Skill Certificate</p>
-    <img class="certificate" src="Images/C++.png">
-    <p>Web Development IA CTE Skill Certificate</p>
-    <img class="certificate" src="Images/C++.png">
-    <p>Web Development IA CTE Skill Certificate</p>
-    <img class="certificate" src="Images/C++.png">
+    <div id="awardsPage">
+        <h1>Awards/Certifications</h1>
+        <p>Web Developement Career Pathway</p>
+        <img class="certificate" src="Images/Awards/WebDevCareerPathway.jpg">
+        <p>Web Development IA CTE Skill Certificate</p>
+        <img class="certificate" src="Images/Awards/WebDevelopmentA.jpg">
+        <p>Computer Programming IA CTE Skill Certificate</p>
+        <img class="certificate" src="Images/Awards/ComputerProgrammingIA.jpg">
+        <p>Digital Media IA CTE Skill Certificate</p>
+        <img class="certificate" src="Images/Awards/DigitalMediaIA.jpg">
+    </div>
 </body>
 </html>
