--- a/PortfolioSite/ActualSite/contact.html
+++ b/PortfolioSite/ActualSite/contact.html
@@ -18,9 +18,11 @@
     <h1>Contact Me</h1>
         <form id="contactForm">
             <p>Name</p>
-            <input type="text" placeholder="name">
+            <input type="text" placeholder="Name">
             <p>Email</p>
-            <input type="text" placeholder="email">
+            <input type="text" placeholder="Email">
+            <p>Subject</p>
+            <input type="text" placeholder="Subject">
             <p>Message</p>
             <textarea placeholder="Message"></textarea>
         </form>
