--- a/PortfolioSite/ActualSite/index.html
+++ b/PortfolioSite/ActualSite/index.html
@@ -16,25 +16,17 @@
     </div>
     <div id="homepage">
         <h2 id="jobTitle">Programmer</h2>
-		<img id="selfPortrait" src="Images/selfImage.png">
+		<img id="selfPortrait" src="Images/SelfImage.jpg">
 		<!--This image needs to be replaced with a personal image-->
-		<p>Hi I'm Tyson Shepherd and I like to game and program.</p>
+		<p>Hi I'm Tyson Shepherd and I like to game and program. I just graduated from highschool and i'm looking for a software development job. I've made lots of things with my programming knowlege. Most notably CPUOptimizer, a program that allows you to mass change affinity levels on multiple processes in the windows operating system(Written in C#).</p>
 		<div id="allImagesAndDescriptions">
 			<div class="imageAndDescription">
-				<img src="Images/C++.png">
-				<p>My PC, where I live and will probably die.</p>
+                <p>My PC, probably where nearly all of my money goes.</p>
+                <img src="Images/AboutMe/MyPC.jpg">
 			</div>
 			<div class="imageAndDescription">
-				<img src="Images/C++.png">
-				<p>My PC</p>
-			</div>
-			<div class="imageAndDescription">
-				<img src="Images/C++.png">
-				<p>CSGO</p>
-			</div>
-			<div class="imageAndDescription">
-				<img src="Images/C++.png">
-				<p>My PC</p>
+                <p>CSGO, my favorite game of all time.</p>
+				<img src="Images/AboutMe/CSGO.jpg">
 			</div>
 		</div>
 	</div>
