added alt tags to images

--- a/PortfolioSite/ActualSite/awards.html
+++ b/PortfolioSite/ActualSite/awards.html
@@ -16,13 +16,13 @@
     <div id="awardsPage">
         <h1>Awards/Certifications</h1>
         <p>Web Developement Career Pathway</p>
-        <img class="certificate" src="Images/Awards/WebDevCareerPathway.jpg">
+        <img class="certificate" src="Images/Awards/WebDevCareerPathway.jpg" alt="Web developement career pathway">
         <p>Web Development IA CTE Skill Certificate</p>
-        <img class="certificate" src="Images/Awards/WebDevelopmentA.jpg">
+        <img class="certificate" src="Images/Awards/WebDevelopmentA.jpg" alt="Web Development IA CTE Certificate">
         <p>Computer Programming IA CTE Skill Certificate</p>
-        <img class="certificate" src="Images/Awards/ComputerProgrammingIA.jpg">
+        <img class="certificate" src="Images/Awards/ComputerProgrammingIA.jpg" alt="Computer Programming IA CTE Certificate">
         <p>Digital Media IA CTE Skill Certificate</p>
-        <img class="certificate" src="Images/Awards/DigitalMediaIA.jpg">
+        <img class="certificate" src="Images/Awards/DigitalMediaIA.jpg" alt="Digital Media IA CTE Certificate">
     </div>
 </body>
 </html>
