--- a/PortfolioSite/ActualSite/portfolio.html
+++ b/PortfolioSite/ActualSite/portfolio.html
@@ -17,13 +17,13 @@
 <body>
     <h1 id="skillTitle">Skills</h1>
     <div id=portfolio>        
-        <img class="gallery" src="./Images/CSharp.png">
-        <img class="gallery" src="./Images/C++.png">
-        <img class="gallery" src="./Images/ATMIS.png">
-        <img class="gallery" src="./Images/linux.png">
-        <img class="gallery" src="./Images/ruby.png">
-        <img class="gallery" src="./Images/seek.png">
-        <img class="gallery" src="./Images/unity.png">
+        <img class="gallery" src="./Images/CSharp.png" alt="CSharp">
+        <img class="gallery" src="./Images/C++.png" alt="C++">
+        <img class="gallery" src="./Images/ATMIS.png" alt="ATMIS">
+        <img class="gallery" src="./Images/linux.png" alt="Linux">
+        <img class="gallery" src="./Images/ruby.png" alt="Ruby">
+        <img class="gallery" src="./Images/seek.png" alt="Seek">
+        <img class="gallery" src="./Images/unity.png" alt="Unity">
     </div>
     <div class="imageDescription">
         <h1 class="nameOfImage">C#</h1>
