--- a/PortfolioSite/ActualSite/index.html
+++ b/PortfolioSite/ActualSite/index.html
@@ -15,17 +15,17 @@
     </div>
     <div id="homepage">
         <h2 id="jobTitle">Programmer</h2>
-		<img id="selfPortrait" src="Images/SelfImage.jpg">
+		<img id="selfPortrait" src="Images/SelfImage.jpg" alt="picture of me">
 		<!--This image needs to be replaced with a personal image-->
 		<p>Hi I'm Tyson Shepherd and I like to game and program. I just graduated from highschool and i'm looking for a software development job. I've made lots of things with my programming knowlege. Most notably CPUOptimizer, a program that allows you to mass change affinity levels on multiple processes in the windows operating system(Written in C#).</p>
 		<div id="allImagesAndDescriptions">
 			<div class="imageAndDescription">
                 <p>My PC, probably where nearly all of my money goes.</p>
-                <img src="Images/AboutMe/MyPC.jpg">
+                <img src="Images/AboutMe/MyPC.jpg" alt="MyPC">
 			</div>
 			<div class="imageAndDescription">
                 <p>CSGO, my favorite game of all time.</p>
-				<img src="Images/AboutMe/CSGO.jpg">
+				<img src="Images/AboutMe/CSGO.jpg" alt="csgo">
 			</div>
 		</div>
 	</div>
